# DiscordResponseGenerator

./: .gitignore  README.md  config.py  env_example  main_terminal.py  main_ui.py  pyproject.toml  sample_responses.json
app/graph/: contitional_edges.py  graph.py  state.py
app/graph/nodes/: models.py
app/graph/nodes/domain_classifier/: domain_classifier.py
app/graph/nodes/intent_classifier/: intent_classifier.py
app/graph/nodes/lead_judge/: lead_judge.py  prompt.py
app/graph/nodes/lead_reposnse/: generate_response.py
app/graph/nodes/process_rag/: base_check.py  process_rag.py  prompt.py  retriever.py  retriever_openai_embed.py  retriever_pinecone.py
app/graph/nodes/reputation_response/: prompt.py  reputation_response.py
app/graph/nodes/techical_classifier/: techical_classifier.py
app/loveable_dox/: clean_docs.py  index_docs.py  index_docs_openai_embed.py  index_dox_pinecone.py  ingestion.py
app/regex_check/: __init__.py  blacklist.py  blacklist_utils.py  detectors.py  filters.py
cleaned_docs/: dox_crawl_result.pkl  features_agent-mode_crawl_result.pkl  features_ai_crawl_result.pkl  features_browser-testing_crawl_result.pkl  features_business-scim_crawl_result.pkl  features_cloud_crawl_result.pkl  features_collaboration_crawl_result.pkl  features_design-templates_crawl_result.pkl  features_integrations-introduction_crawl_result.pkl  features_knowledge_crawl_result.pkl
utils/: process_graphs.py
